--- a/src/styleguide.html
+++ b/src/styleguide.html
@@ -26,48 +26,52 @@
     <p class="map"><a href="./map.html">Карта</a></p>
     
 
-    <div class="back_grad">
+    <div class="back_grad" class="A_Gradient" >
         <img class="grad" src="./images/styleguide/background_grad.webp">
     </div>
-    <div class="logo">
-        <a href="./index.html" ><img class="logotype" src="./images/styleguide/logotype_black.webp"></a>
-        <h1 class="media_o">медиа о природных знаках</h1>
+    <div class="logo" class="M_LogoAndDescription" >
+        <a href="./index.html" ><img class="logotype" class="A_Logo" src="./images/styleguide/logotype_black.webp"></a>
+        <h1 class="media_o" class="A_MediaO" >медиа о природных знаках</h1>
     </div>
     <a href="./index.html" id="back_button"></a>
     <div class="navigation">
-        <button id="about_but" > <a href="#about_us_id" class="about_us">
+
+        <button id="about_but" class="A_Navigation" > <a href="#about_us_id" class="about_us">
             <h2>o проекте</h2>
-        </a>
-        </button>
-        <button id="logo_but" ><a href="#logo_id" class="logooo">
+        </a></button>
+
+        <button id="logo_but" class="A_Navigation" ><a href="#logo_id" class="logooo">
             <h2>логотип</h2>
-        </a>
-    </button>
-    <button><a href="#color_id" class="color">
+        </a></button>
+
+        <button class="A_Navigation"><a href="#color_id" class="color">
             <h2>цвет</h2>
-        </a>
-    </button>
-        <button id="typo_but" ><a href="#typo_id" class="typography">
+        </a></button>
+
+        <button id="typo_but" class="A_Navigation" ><a href="#typo_id" class="typography">
             <h2>типографика</h2>
         </a></button>
-        <button><a href="#grid_id" class="grid">
+
+        <button class="A_Navigation" ><a href="#grid_id" class="grid"  >
             <h2>сетка</h2>
         </a></button>
-       <button id="graphic_but" > <a href="#graphic_id" class="graphic">
+
+       <button id="graphic_but" class="A_Navigation" > <a href="#graphic_id" class="graphic">
             <h2>графика</h2>
-        </a>
-    </button>
-        <button><a href="#lang_id" class="lang">
+        </a></button>
+
+        <button class="A_Navigation"><a href="#lang_id" class="lang">
             <h2>язык</h2>
-        </a>
-    </button>
-        <button><a href="#merch_id" class="merch">
+        </a></button>
+
+        <button class="A_Navigation"><a href="#merch_id" class="merch">
             <h2>мерч</h2>
         </a></button>
+
     <a href="#back_button" class="up_button"></a>
     </div>
 
-    <div class="about_block">
+    <div class="about_block" class="S_AboutBlock" >
         <h3 id="about_us_id" >о проекте</h3>
         <p class="intro" >Мы — команда тех, кто любит задавать вопросы.<br> Неважно, смотрим ли мы на облака, кору дерева<br> или следы на снегу, — нас всегда волнует: «Что это значит?». <br>Мы собрались вместе, чтобы объединить наши интересы<br> к природе, науке, культуре и дизайну.</p>
         <img class="collage" src="./images/styleguide/collage.webp">
@@ -79,7 +83,7 @@
          </div>
     </div>
 
-    <div class="logotype_block">
+    <div class="logotype_block" class="S_LogotypeBlock">
         <h3 id="logo_id" class="logoooo">логотип</h3>
         <img class='first_logo' src="./images/styleguide/logo_green.webp">
         <h4 class="postroenie" >построение и механика</h4>
@@ -132,7 +136,7 @@
         <h4>фавикон</h4>
         <img class="favicon" src="./images/styleguide/favicon.webp">
     </div>
-    <div class="color_block">
+    <div class="color_block" class="S_ColorBlock" >
         <h3 id="color_id" class="">цвет</h3>
         <p class="osn_1" >Основной цвет</p>
         <p class="cvet_1">#B0EB00</p>
@@ -149,7 +153,7 @@
         <h4>в вебе</h4>
         <img  class="color_v_webe" src="./images/styleguide/color_v_webe.webp">
     </div>
-    <div class="typo_block">
+    <div class="typo_block" class="S_TypoBlock" >
         <h3 id="typo_id" class="">типографика</h3>
         <h4>шрифт</h4>
         <div class="mobile_name_font">
@@ -227,7 +231,7 @@
             <img class="ex_korni" src="./images/styleguide/ex_korni.webp">
         </div>
     </div>
-    <div class="grid_block">
+    <div class="grid_block" class="S_GridBlock" >
         <h3 id="grid_id" >сетка</h3>
         <h4>веб</h4>
         <div class="desktop">
@@ -258,7 +262,7 @@
         <h4 class="pechat_4">4</h4>
         <img class="pechat" src="./images/styleguide/grid_pechat.webp">
     </div>
-    <div class="graphic_block">
+    <div class="graphic_block" class="S_GraphicsBlock" >
         <h3 id="graphic_id" >графика</h3>
         <div class="opisanie_graph">
             <p >Стиль, в котором царит естественный хаос, подчиняющийся своим<br> внутренним законам. Это путешествие через густой лес знаний.<br> Такой подход вдохновляет на открытие смысла среди кажущегося<br> беспорядка, оставляя пространство для размышлений <br>и личной интерпретации.</p>
@@ -293,7 +297,7 @@
             <img class="layers" src="./images/styleguide/layers.webp">
         </div>
     </div>
-    <div class="lang_block">
+    <div class="lang_block" class="S_LanguageBlock" >
         <h3 id="lang_id" >язык</h3>
         <ol class="principi">
             <li>Мы придерживаемся следующих принципов коммуникации:</li>
@@ -310,7 +314,7 @@
             <img class="ex_korni" src="./images/styleguide/present.webp">
         </div>
     </div>
-    <div class="merch_block" >
+    <div class="merch_block" class="S_MerchBlock" >
      <h3 id="merch_id" >мерч</h3>
      <h4>примеры</h4>
      <div class="merch_ex" >
