--- a/src/index.html
+++ b/src/index.html
@@ -26,136 +26,82 @@
   <meta name="keywords" content="медиа, природа, умвельт, природные знаки, медиа о природе">
   <link rel="icon" href="images/favicon.png" type="image/x-icon">
   </head>
- 
+  <body>
+    <div class="O_Header">
+      <div class="M_Menu">
+        <div class="A_Logotype"><a href="">чаща</a></div>
+        <div class="A_ChapterTests">тесты</div>
+        <div class="A_ChapterAbout">о нас</div>
+        <div class="A_ChapterLit">литература</div>
+      </div>
+    </div>
 
-<body class="main">
-  <header>
-    <div class="gradient"><img src="images/index/top_gradient.png" alt=""></div>
-    <p class="chascha">чаща</p>
-  </header> 
-
-<div class="main_screen">
-   
-  <div class="menu">
-    <ul>
-      <li><a href="index.html">Главная</a></li> 
-      <li><a href="about.html">О нас</a></li>   
-      <li><a href="map.html">Карта</a></li>
-      <li><a href="literature.html">Литература</a></li> 
-      <li>
-        <p>Разделы</p>  
-        <ul>
-          <li><a href="sound.html">Звук</a></li>
-          <li><a href="geo.html">Геология</a></li>   
-          <li><a href="habitat.html">Поведение</a></li> 
-          <li><a href="structure.html">Строение</a></li>
-          <li><a href="feno.html">Фенология</a></li> 
-          <li><a href="color.html">Цвет</a></li>
-        </ul> 
-      </li>  
-      <li><a href="styleguide.html">Стайл-гайд</a></li> 
-    </ul>
-    <form> 
-      <input type="text"  placeholder="Что Вы хотите узнать?">
-    </form> 
-  </div>
-    
-   
-  <div class="table">
-    <div class="div1"><p>Звук</p></div>
-    <div class="div2" id="div2"><a href="sound/sound_article1.html"><div id="image-container" class="image-container"><img src="images/sound/sound_article1/img1.webp" alt=""> <p>Пение птиц как экологический индикатор</p></div></a></div>
-    <div class="div3"></div>   
-    <div class="div4"></div> 
-    <div class="div5"><a href="sound/sound_article2.html"> Зов дельфинов: ультразвуковая коммуникация <br><p class="hashtags">#звук #океан #коммуникация</p></a></div>
-    <div class="div6"></div>      
-    <div class="div7"><p>Геология</p></div>   
-    <div class="div8"><a href="geo/geo_article1.html">Тектонические сдвиги: язык движения Земли <br><p class="hashtags">#геология #земля</p></a></div>
-    <div class="div9"></div>    
-    <div class="div10"><a href="geo/geo_article2.html">Вулканическая пыль: следы катастроф <br><p class="hashtags">#вулканы #катастрофы</p></a></div>
-    <div class="div11"></div> 
-    <div class="div12"></div> 
-    <div class="div13"><p>Поведение</p></div> 
-    <div class="div14"></div>  
-    <div class="div15"></div> 
-    <div class="div16" id="div2"><a href="habitat/habitat_article1.html"><div id="image-container" class="image-container"><img src="images/habitat/habitat_article1/img1.webp" alt=""> <p>Правда ли, что коровы ложатся, когда собирается дождь?</p></div></a></div>
-    <div class="div17"></div>
-    <div class="div18"></div> 
-    <div class="div19"><p>Строение</p></div>
-    <div class="div20"></div>
-    <div class="div21"></div>
-    <div class="div22"></div> 
-    <div class="div23"></div>
-    <div class="div24"><a href="structure/structure_article1.html">Паутинные сети: архитектура выживания<br><p class="hashtags">#пауки #лес</p></a></div>
-    <div class="div25"><p>Фенология</p></div>
-    <div class="div26"></div>
-    <div class="div27" id="div2"><a href="feno/feno_article1.html"><div  id="image-container" class="image-container"><img src="images/feno/6422219.webp" alt=""> <p>Ритмы морей: нерестовые циклы рыб</p></div></a></div>
-    <div class="div28"><a href="feno/feno_article2.html">Первые морозы: как зима сигнализирует о своём приходе <br><p class="hashtags">#циклы #времена_года</p></a></div>
-    <div class="div29"></div>     
-    <div class="div30"></div>   
-    <div class="div31"><p>Цвет</p></div>
-    <div class="div32"><a href="color/color_article1.html">Яркие цвета кораллов: сигнал о бедствии <br><p class="hashtags">#цвет</p></a></div>
-    <div class="div33"></div>
-    <div class="div34"></div> 
-    <div class="div35"></div>   
-    <div class="div36"></div>
-  </div> 
-</div>
+    <div class="A_Chapters"><p>разделы: <br>
+      <u>звук</u>, <u>геология</u>, <u>поведение</u>, <br> <u>строение</u>, <u>фенология</u>, <u>цвет</u></p></div>
 
 
+      <div class="S_Cards">
+        <div class="O_ColumnsOfCards">
+          <div class="M_Card">
+            <div class="A_CardImage"><img src="./images/index/A_Image-2.jpg"></div>
+            <div class="W_CardDescription">
+              <div class="A_CardName"><p>правда ли, что коровы ложатся, когда собирается дождь?</p></div>
+              <div class="A_CardTags"><p>#поведение #дождь</p></div>
+            </div> 
+          </div>
+          <div class="M_Card">
+            <div class="A_CardImage"><img src="./images/index/A_Image.jpg"></div>
+            <div class="W_CardDescription">
+              <div class="A_CardName"><p>что годичные кольца деревьев рассказывают о прошлых климатических условиях и экосистемах.</p></div>
+              <div class="A_CardTags"><p>#деревья</p></div>
+            </div>
+          </div>
+          <div class="M_Card">
+            <div class="A_CardImage"><img src="./images/index/A_Image-1.jpg"></div>
+            <div class="W_CardDescription">
+              <div class="A_CardName"><p>существует ли стадное чувство?</p></div>
+              <div class="A_CardTags"><p>#поведение #животные</p></div>
+            </div>
+          </div>
+        </div>
+
+        <div class="O_ColumnsOfCards">
+          <div class="M_Card">
+            <div class="A_CardImage"><img src="./images/index/A_Image1.jpg"></div>
+            <div class="W_CardDescription">
+              <div class="A_CardName"><p>гнездование: что гнёзда говорят об экологической ситуации?</p></div>
+              <div class="A_CardTags"><p>#поведение #птицы</p></div>
+            </div>
+          </div>
+          <div class="M_Card">
+            <div class="A_CardImage"><img src="./images/index/A_Image1-1.jpg"></div>
+            <div class="W_CardDescription">
+              <div class="A_CardName"><p>приливы и отливы с точки зрения экологии</p></div>
+              <div class="A_CardTags"><p>#вода #море</p></div>
+            </div>
+          </div>
+          <div class="M_Card">
+            <div class="A_CardImage"><img src="./images/index/A_Image1-2.jpg"></div>
+            <div class="W_CardDescription">
+              <div class="A_CardName"><p>советы. переработка</p></div>
+              <div class="A_CardTags"><p>#советы #экология #переработка</p></div>
+            </div>
+          </div>
+        </div>
+      </div>
 
 
-<form id="my-form" action="https://formspree.io/f/mzzpnoee" method="POST">
-  <p id="form_text">Присоединяйся к чаще!</p>
-
-  <input class="email" type="email" name="email" placeholder="Почта"/>
-  <button id="my-form-button">Отправить</button>
-  <p id="my-form-status"></p>
-</form>
-
-<footer> 
-  <div class="names"> 
-    <a href="https://t.me/kaddelina">@kaddelina</a>
-    <a href="https://t.me/kudryashhhh">@kudryashhhh</a>
-  </div>
-  <div class="socials"> 
-    <a href="https://t.me/uumwelt" class="tg"><img class="tg1" src="images/index/tg.webp" alt=""></a>
-    <a href="https://vk.com/club227899273" class="tg"><img class="tg1" src="images/index/vk.webp" alt=""></a>
-    <a href="https://clck.ru/3DfjFZ" class="tg"><img class="tg1" src="images/index/dzen.webp" alt=""></a>
-  </div>  
-</footer> 
-
-<script>
-  var form = document.getElementById("my-form");
   
-  async function handleSubmit(event) {
-    event.preventDefault();
-    var status = document.getElementById("my-form-status");
-    var data = new FormData(event.target);
-    fetch(event.target.action, { 
-      method: form.method,  
-      body: data,
-      headers: {
-          'Accept': 'application/json'
-      }
-    }).then(response => {
-      if (response.ok) {
-        status.innerHTML = "Спасибо!";
-        form.reset()
-      } else {
-        response.json().then(data => {
-          if (Object.hasOwn(data, 'errors')) {
-            status.innerHTML = data["errors"].map(error => error["message"]).join(", ")
-          } else {
-            status.innerHTML = "Форма пуста"
-          }
-        })
-      } 
-    }).catch(error => {
-      status.innerHTML = "Форма пуста"
-    });  
-  } 
-  form.addEventListener("submit", handleSubmit)
-</script> 
+<footer> 
+
+  <div class="W_Socials">
+    <div class="A_Icon"><a href="https://t.me/uumwelt" class="tg"><img class="tg1" src="images/index/A_Icon.png" alt=""></a></div>
+    <div class="A_Icon"><a href="https://vk.com/club227899273" class="tg"><img class="tg1" src="images/index/A_Icon-1.png" alt=""></a></div>
+    <div class="A_Icon"><a href="https://clck.ru/3DfjFZ" class="tg"><img class="tg1" src="images/index/A_Icon-2.png" alt=""></a></div>
+  </div>
+
+</footer> 
+ 
  
   </body>
 </html>
