--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8" />  
     <!-- Primary Meta Tags --> 
 <title>ЧАЩА </title> 
-<meta name="title" content="Чаща. Медиа о природных знаках " /> 
+<meta name="title" content="Чаща. Медиа о природных знаках "/> 
 <meta name="description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Сервис Умвельт собирает и интерпретирует эти природные сигналы." /> 
  
 <!-- Open Graph / Facebook --> 
 <meta property="og:type" content="website" /> 
-<meta property="og:url" content="https://hseadc.github.io/umwelt/" /> 
+<meta property="og:url" content="https://hseadc.github.io/umwelt/"/> 
 <meta property="og:title" content="Чаща. Медиа о природных знаках " /> 
 <meta property="og:description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Медиа Чаща собирает и интерпретирует эти природные сигналы." /> 
 <meta property="og:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.png" /> 
@@ -54,7 +54,7 @@
 
       <div class="S_Cards"> 
         <div class="O_ColumnsOfCards">
-          <a href="./habitat/habitat_article1.html">
+          <a href="./habitat/cows_lie_down_before_rain.html">
             <div class="M_Card" > 
               <div class="A_CardImage"><img src="./images/index/img1.webp"></div>
               <div class="W_CardDescription">
@@ -76,37 +76,44 @@
               </div>
             </div>
           </div>
-          <div class="M_Card">
-            <div class="A_CardImage"><img src="./images/index/img3.webp"></div>
-            <div class="W_CardDescription">
-              <div class="A_CardName"><p>годичные кольца деревьев: как их&nbsp;структура рассказывает о&nbsp;прошлых засухах, пожарах и&nbsp;других экстремальных событиях</p></div>
-              <div class="M_CardTags">
-                <div class="A_CardTag"><p>#строение</p></div>
-                <div class="A_CardTag"><p>#растения</p></div>
+          <a href="./structure/godichnye_koltsa_dereviev.html">
+            <div class="M_Card">
+              <div class="A_CardImage"><img src="./images/index/img3.webp"></div>
+              <div class="W_CardDescription">
+                <div class="A_CardName"><p>годичные кольца деревьев: как их&nbsp;структура рассказывает о&nbsp;прошлых засухах, пожарах и&nbsp;других экстремальных событиях</p></div>
+                <div class="M_CardTags">
+                  <div class="A_CardTag"><p>#строение</p></div>
+                  <div class="A_CardTag"><p>#растения</p></div>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="M_Card">
-            <div class="A_CardImage"><img src="./images/index/img4.webp"></div>
-            <div class="W_CardDescription">
-              <div class="A_CardName"><p>поведение животных перед стихийными бедствиями: как звери чувствуют приближение землетрясений и&nbsp;цунами</p></div>
-              <div class="M_CardTags">
-                <div class="A_CardTag"><p>#поведение</p></div>
-                <div class="A_CardTag"><p>#животные</p></div>
-                <div class="A_CardTag"><p>#стихийные_бедствия</p></div>
+          </a>
+
+          <a href="./habitat/povedenie_zhivotnyh_pered_stihiynymi_bedstviami.html">
+            <div class="M_Card">
+              <div class="A_CardImage"><img src="./images/index/img4.webp"></div>
+              <div class="W_CardDescription">
+                <div class="A_CardName"><p>поведение животных перед стихийными бедствиями: как звери чувствуют приближение землетрясений и&nbsp;цунами</p></div>
+                <div class="M_CardTags">
+                  <div class="A_CardTag"><p>#поведение</p></div>
+                  <div class="A_CardTag"><p>#животные</p></div>
+                  <div class="A_CardTag"><p>#стихийные_бедствия</p></div>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="M_Card">
-            <div class="A_CardImage"><img src="./images/index/img5.webp"></div>
-            <div class="W_CardDescription">
-              <div class="A_CardName"><p>как изменения в&nbsp;птичьих трелях сигнализируют о&nbsp;состоянии окружающей среды?</p></div>
-              <div class="M_CardTags">
-                <div class="A_CardTag"><p>#звук</p></div>
-                <div class="A_CardTag"><p>#птицы</p></div>
+          </a>
+          <a href="./sound/ptichi_treli.html">
+            <div class="M_Card">
+              <div class="A_CardImage"><img src="./images/index/img5.webp"></div>
+              <div class="W_CardDescription">
+                <div class="A_CardName"><p>как изменения в&nbsp;птичьих трелях сигнализируют о&nbsp;состоянии окружающей среды?</p></div>
+                <div class="M_CardTags">
+                  <div class="A_CardTag"><p>#звук</p></div>
+                  <div class="A_CardTag"><p>#птицы</p></div>
+                </div>
               </div>
             </div>
-          </div>
+          </a>
           <div class="M_Card">
             <div class="A_CardImage"><img src="./images/index/img6.webp"></div>
             <div class="W_CardDescription">
@@ -143,7 +150,6 @@
               <div class="M_CardTags">
                 <div class="A_CardTag"><p>#фенология</p></div>
                 <div class="A_CardTag"><p>#растения</p></div>
-                <div class="A_CardTag"><p>#океан</p></div>
               </div>
             </div>
           </div>
@@ -160,16 +166,18 @@
               </div>
             </div>
           </div>
-          <div class="M_Card">
-            <div class="A_CardImage"><img src="./images/index/img11.webp"></div>
-            <div class="W_CardDescription">
-              <div class="A_CardName"><p>цвета осени: почему листья меняют цвет и&nbsp;как это связано с&nbsp;температурой и&nbsp;влажностью</p></div>
-              <div class="M_CardTags">
-                <div class="A_CardTag"><p>#цвет</p></div>
-                <div class="A_CardTag"><p>#растения</p></div>
+          <a href="./color/why_do_leaves_change_color.html">
+            <div class="M_Card">
+              <div class="A_CardImage"><img src="./images/index/img11.webp"></div>
+              <div class="W_CardDescription">
+                <div class="A_CardName"><p>цвета осени: почему листья меняют цвет и&nbsp;как это связано с&nbsp;температурой и&nbsp;влажностью</p></div>
+                <div class="M_CardTags">
+                  <div class="A_CardTag"><p>#цвет</p></div>
+                  <div class="A_CardTag"><p>#растения</p></div>
+                </div>
               </div>
             </div>
-          </div>
+          </a>
           <div class="M_Card">
             <div class="A_CardImage"><img src="./images/index/img12.webp"></div>
             <div class="W_CardDescription">
@@ -179,25 +187,29 @@
               </div>
             </div>
           </div>
-          <div class="M_Card">
-            <div class="A_CardImage"><img src="./images/index/img13.webp"></div>
-            <div class="W_CardDescription">
-              <div class="A_CardName"><p>миграция птиц и&nbsp;её&nbsp;связь с&nbsp;изменением климата: как маршруты перелётов сигнализируют о&nbsp;глобальных изменениях</p></div>
-              <div class="M_CardTags">
-                <div class="A_CardTag"><p>#поведение</p></div>
-                <div class="A_CardTag"><p>#птицы</p></div>
+          <a href="./habitat/migratsya_ptiz.html">
+            <div class="M_Card">
+              <div class="A_CardImage"><img src="./images/index/img13.webp"></div>
+              <div class="W_CardDescription">
+                <div class="A_CardName"><p>миграция птиц и&nbsp;её&nbsp;связь с&nbsp;изменением климата: как маршруты перелётов сигнализируют о&nbsp;глобальных изменениях</p></div>
+                <div class="M_CardTags">
+                  <div class="A_CardTag"><p>#поведение</p></div>
+                  <div class="A_CardTag"><p>#птицы</p></div>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="M_Card">
-            <div class="A_CardImage"><img src="./images/index/img14.webp"></div>
-            <div class="W_CardDescription">
-              <div class="A_CardName"><p>как слои горных пород рассказывают о&nbsp;прошлых изменениях климата</p></div>
-              <div class="M_CardTags">
-                <div class="A_CardTag"><p>#геология</p></div>
+          </a>
+          <a href="./geo/sloi_gornyh_porod.html">
+            <div class="M_Card">
+              <div class="A_CardImage"><img src="./images/index/img14.webp"></div>
+              <div class="W_CardDescription">
+                <div class="A_CardName"><p>как слои горных пород рассказывают о&nbsp;прошлых изменениях климата</p></div>
+                <div class="M_CardTags">
+                  <div class="A_CardTag"><p>#геология</p></div>
+                </div>
               </div>
             </div>
-          </div>
+          </a>
           <div class="M_Card">
             <div class="A_CardImage"><img src="./images/index/img15.webp"></div>
             <div class="W_CardDescription">
@@ -217,7 +229,7 @@
                 <div class="A_CardTag"><p>#деревья</p></div>
               </div>
             </div>
-          </div>
+          </div> 
 
           <div class="M_Card">
             <div class="A_CardImage"><img src="./images/index/img17.webp"></div>
