--- a/src/literature.html
+++ b/src/literature.html
@@ -17,18 +17,18 @@
 
  
 <!-- Twitter -->  
-<meta property="twitter:card" content="summary_large_image" /> 
+<meta property="twitter:card" content="summary_large_image" />  
 <meta property="twitter:url" content="https://hseadc.github.io/umwelt/" /> 
 <meta property="twitter:title" content="Чаща. Тесты" /> 
 <meta property="twitter:description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Медиа Чаща собирает и интерпретирует эти природные сигналы." /> 
 <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.png" /> 
-
+ 
   <meta name="keywords" content="медиа, природа, умвельт, природные знаки, медиа о природе, чаща">
   <link rel="icon" href="images/favicon.png" type="image/x-icon">
-  </head> 
-  <body class="index">
+  </head>  
+  <body class="index" >   
     <div class="O_Header">
-      <div class="M_Menu"> 
+      <div class="M_Menu">   
         <div class="A_Logotype"><a href="./index.html">чаща</a></div> 
         <div class="A_ChapterTests"><a href="./tests.html">тесты</a></div>
         <div class="A_ChapterAbout"><a href="./about.html">о нас</a></div>
@@ -54,6 +54,19 @@
               </div>
             </div>
           </a> 
+
+          <a href="https://www.litres.ru/book/maykl-marder/rastitelnoe-myshlenie-filosofiya-vegetativnoy-zhizni-70806625/">
+            <div class="M_Card" >  
+              <div class="A_CardImageCover"><img src="./images/books/Marder.png"></div>
+              <div class="W_CardDescription">
+                <div class="A_CardName"><p>«Растительное мышление. Философия вегетативной жизни»</p></div>
+                <div class="M_CardTags">
+                  <div class="A_CardTag"><p>Майкл Мардер</p></div>
+                  <div class="A_CardTag"><p>2024</p></div>
+                </div>
+              </div>
+            </div>
+          </a> 
           
         </div>
       
@@ -71,7 +84,7 @@
                 </div>
               </a>
         </div>
-      </div>
+      </div> 
 
     </div>
 
