--- a/src/tests.html
+++ b/src/tests.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+<html lang="en" dir="ltr">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="utf-8" />  
+    <!-- Primary Meta Tags --> 
+<title>ЧАЩА</title> 
+<meta name="title" content="Чаща. Медиа о природных знаках "/> 
+<meta name="description" content="Тесты по естествознанию. Проверка знаний о природных объектах, явлениях и экологических процессах в формате вопросов с вариантами ответов." /> 
+ 
+<!-- Open Graph / Facebook --> 
+<meta property="og:type" content="website" /> 
+<meta property="og:url" content="https://hseadc.github.io/umwelt/"/> 
+<meta property="og:title" content="Чаща. Медиа о природных знаках " /> 
+<meta property="og:description" content="Тесты по естествознанию. Проверка знаний о природных объектах, явлениях и экологических процессах в формате вопросов с вариантами ответов." /> 
+
+<!-- Twitter -->  
+<meta property="twitter:card" content="summary_large_image" /> 
+<meta property="twitter:url" content="https://hseadc.github.io/umwelt/" /> 
+<meta property="twitter:title" content="Чаща. Медиа о природных знаках " /> 
+<meta property="twitter:description" content="Тесты по естествознанию. Проверка знаний о природных объектах, явлениях и экологических процессах в формате вопросов с вариантами ответов." /> 
+
+
+<meta name="keywords" content="тесты, природа, медиа, природа, умвельт, природные знаки, медиа о природе">
+ 
+</head> 
 <body class="tests" >
 
     <div class="O_Header">
@@ -26,7 +45,6 @@
         <a href="../tests/lakes.html">
         <div class="A_Image">
            <img src="./images/tests/baikal.webp">
-           <img class="Q_GradientTest" src="./images/tests/Q_Gradient_tests.webp">
         </div>
         </a>   
         <div class="M_TitleTest">
@@ -40,10 +58,11 @@
     </div>
 
     <div class="O_TestCard">
+        <a href="../tests/yavlenia.html">
         <div class="A_Image">
            <img src="./images/tests/galo.webp">
-           <img class="Q_GradientTest" src="./images/tests/Q_Gradient_tests.webp">
-        </div>   
+        </div>  
+    </a> 
         <div class="M_TitleTest">
             <div class="A_TitleTest">
                 <p class="A_TitleTest">Природные явления и процессы</p>
@@ -55,9 +74,9 @@
     </div>
 
     <div class="O_TestCard">
+        <a href="../tests/insects.html">
         <div class="A_Image">
            <img src="./images/tests/fly.webp">
-           <img class="Q_GradientTest" src="./images/tests/Q_Gradient_tests.webp">
         </div>   
         <div class="M_TitleTest">
             <div class="A_TitleTest">
@@ -67,6 +86,7 @@
                 <p class="A_TitleTag">#насекомые #поведение</p>
             </div>
         </div>
+        </a>
     </div>
  </div>
 
