--- a/src/tests/lakes.html
+++ b/src/tests/lakes.html
@@ -4,51 +4,54 @@
   <head>
     <meta charset="utf-8" />  
     <!-- Primary Meta Tags --> 
-<title>ЧАЩА </title> 
+<title>ЧАЩА</title> 
 <meta name="title" content="Чаща. Медиа о природных знаках "/> 
-<meta name="description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Сервис Умвельт собирает и интерпретирует эти природные сигналы." /> 
+<meta name="description" content="Тест по гидрологии. Проверка знаний о водных объектах, их классификации и физико-географических характеристиках в формате структурированных вопросов." /> 
  
 <!-- Open Graph / Facebook --> 
 <meta property="og:type" content="website" /> 
 <meta property="og:url" content="https://hseadc.github.io/umwelt/"/> 
 <meta property="og:title" content="Чаща. Медиа о природных знаках " /> 
-<meta property="og:description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Медиа Чаща собирает и интерпретирует эти природные сигналы." /> 
+<meta property="og:description" content="Тест по гидрологии. Проверка знаний о водных объектах, их классификации и физико-географических характеристиках в формате структурированных вопросов." /> 
 
 <!-- Twitter -->  
 <meta property="twitter:card" content="summary_large_image" /> 
 <meta property="twitter:url" content="https://hseadc.github.io/umwelt/" /> 
 <meta property="twitter:title" content="Чаща. Медиа о природных знаках " /> 
-<meta property="twitter:description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Медиа Чаща собирает и интерпретирует эти природные сигналы." /> 
+<meta property="twitter:description" content="Тест по гидрологии. Проверка знаний о водных объектах, их классификации и физико-географических характеристиках в формате структурированных вопросов." /> 
 <script src="/src/test.js"></script>
 
-<meta name="keywords" content="медиа, природа, умвельт, природные знаки, медиа о природе">
+<meta name="keywords" content="моря, озера, медиа, природа, умвельт, природные знаки, медиа о природе">
  
 </head> 
 <body class="lakes">
 
   <div class="O_Header">
     <div class="M_Menu">   
-      <div class="A_Logotype"><a href="./index.html">чаща</a></div> 
-      <div class="A_ChapterTests"><a href="./tests.html">тесты</a></div>
-      <div class="A_ChapterAbout"><a href="./about.html">о нас</a></div>
-      <div class="A_ChapterLit"><a href="./literature.html">литература</a></div>
+      <div class="A_Logotype"><a href="../index.html">чаща</a></div> 
+      <div class="A_ChapterTests"><a href="../tests.html">тесты</a></div>
+      <div class="A_ChapterAbout"><a href="../about.html">о нас</a></div>
+      <div class="A_ChapterLit"><a href="../literature.html">литература</a></div>
     </div>
   </div>
 
-  <!-- <div class="A_Chapters">
-    <p>тесты</p>
-  </div> -->
+   <div class="A_Chapters">
+    <p>реки и озёра</p>
+  </div>
 
   <div class="quiz-container">
-    <h1>Тест: Реки и озёра</h1>
+    <div class="Q_QuestionBox">
+      <img class="Q_QuestionBox1" src="/src/images/tests/question_box.webp">
+    </div>
     <div id="quiz"></div>
-    <button id="submit">Проверить ответы</button>
+    <button id="submit">далее</button>
     <div id="results"></div>
   </div>
 
   <div class="A_BaikalImage">
     <img class="A_BaikalImage1" src="/src/images/tests/test_lakes.webp">
   </div>
+
 
   <script src="/src/test.js"></script>
 
