--- a/src/tests/insects.html
+++ b/src/tests/insects.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />  
     <!-- Primary Meta Tags --> 
-<title>ЧАЩА</title> 
+<title>Тест по энтомологии. Проверка знаний о морфологии, биологии и систематике насекомых в формате стандартизированных вопросов.</title> 
 <meta name="title" content="Чаща. Медиа о природных знаках "/> 
 <meta name="description" content="Тест по энтомологии. Проверка знаний о морфологии, биологии и систематике насекомых в формате стандартизированных вопросов." /> 
  
@@ -22,7 +22,7 @@
 <script src="/src/test_insects.js"></script>
 
 <meta name="keywords" content="насекомые, медиа, природа, умвельт, природные знаки, медиа о природе">
- 
+<link rel="icon" href="../images/favicon.png" type="image/x-icon">
 </head> 
 <body class="insects" >
 
@@ -39,7 +39,7 @@
         <p>насекомые и их особенности</p>
       </div>
     
-      <div class="quiz-container">
+      <div class="S_Quiz_Container">
         <div class="Q_QuestionBox">
           <img class="Q_QuestionBox1" src="/src/images/tests/question_box.webp">
         </div>
