--- a/src/tests/yavlenia.html
+++ b/src/tests/yavlenia.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />  
     <!-- Primary Meta Tags --> 
-<title>ЧАЩА</title> 
+<title>Тест по природным явлениям. Проверка знаний о физических и биологических процессах в окружающей среде с использованием стандартизированных вопросов.</title> 
 <meta name="title" content="Чаща. Медиа о природных знаках "/> 
 <meta name="description" content="Тест по природным явлениям. Проверка знаний о физических и биологических процессах в окружающей среде с использованием стандартизированных вопросов." /> 
  
@@ -22,7 +22,7 @@
 <script src="/src/test_yavlenia.js"></script>
 
 <meta name="keywords" content="явления, тесты, медиа, природа, умвельт, природные знаки, медиа о природе">
- 
+<link rel="icon" href="../images/favicon.png" type="image/x-icon">
 </head>
 <body class="yavlenia">
 
@@ -39,7 +39,7 @@
         <p>природные явления и процессы</p>
       </div>
     
-      <div class="quiz-container">
+      <div class="S_Quiz_Container">
         <div class="Q_QuestionBox">
           <img class="Q_QuestionBox1" src="/src/images/tests/question_box.webp">
         </div>
