--- a/src/advice/signals.html
+++ b/src/advice/signals.html
@@ -5,22 +5,22 @@
     <meta charset="utf-8" />  
     <!-- Primary Meta Tags --> 
 <title>Как использовать природные сигналы для планирования сада или огорода: советы для садоводов и дачников</title> 
-<meta name="title" content="Коровы"/> 
-<meta name="description" content="Правда ли что коровы ложатся, когда собирается дождь?" /> 
+<meta name="title" content="Как использовать природные сигналы"/> 
+<meta name="description" content="Как использовать природные сигналы для планирования сада или огорода: советы для садоводов и дачников" /> 
  
 <!-- Open Graph / Facebook --> 
 <meta property="og:type" content="website" /> 
 <meta property="og:url" content="https://hseadc.github.io/chascha/"/> 
-<meta property="og:title" content="Цвета осени" /> 
-<meta property="og:description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Медиа Чаща собирает и интерпретирует эти природные сигналы." /> 
+<meta property="og:title" content="Как использовать природные сигналы" /> 
+<meta property="og:description" content="Как использовать природные сигналы для планирования сада или огорода: советы для садоводов и дачников" /> 
 <meta property="og:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.png" /> 
 
  
 <!-- Twitter -->  
 <meta property="twitter:card" content="summary_large_image" /> 
 <meta property="twitter:url" content="https://hseadc.github.io/chascha/" /> 
-<meta property="twitter:title" content="Цвета осени" /> 
-<meta property="twitter:description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Медиа Чаща собирает и интерпретирует эти природные сигналы." /> 
+<meta property="twitter:title" content="Как использовать природные сигналы" /> 
+<meta property="twitter:description" content="Как использовать природные сигналы для планирования сада или огорода: советы для садоводов и дачников" /> 
 <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.png" /> 
 
 
@@ -41,7 +41,7 @@
         <img class="A_AdviceImg" src="../images/advice/pole.webp">
         <div class="A_ArticleTitle">Как использовать природные сигналы для планирования сада или огорода: советы для садоводов и дачников</div>
         <div class="A_ArticleText">1. Оцените почву и&nbsp;условия участка<br>
-            Природные особенности участка, такие как его влажность, тип почвы и&nbsp;освещенность, подскажут, какие растения лучше выбрать. Например, для болотистых участков подойдут влаголюбивые растения (калужница, ирис), а&nbsp;для сухих склонов&nbsp;&mdash; засухоустойчивые виды (тысячелистник, душица)
+            Природные особeнности участка, такие как его влажность, тип почвы и&nbsp;освещенность, подскажут, какие растения лучше выбрать. Например, для болотистых участков подойдут влаголюбивые растения (калужница, ирис), а&nbsp;для сухих склонов&nbsp;&mdash; засухоустойчивые виды (тысячелистник, душица)
             <br><br>
             2. Прислушивайтесь к&nbsp;звукам природы<br>
             Звуки сада&nbsp;&mdash; шелест листьев, пение птиц, жужжание насекомых&nbsp;&mdash; помогут создать гармоничное пространство. Чтобы привлечь птиц и&nbsp;насекомых, посадите кустарники и&nbsp;цветы, а&nbsp;также создайте водоемы или поставьте кормушки
