--- a/src/sound/zvuk_dereviev.html
+++ b/src/sound/zvuk_dereviev.html
@@ -5,22 +5,22 @@
     <meta charset="utf-8" />  
     <!-- Primary Meta Tags --> 
 <title>Как шум деревьев и треск веток предупреждают о приближении шторма?</title> 
-<meta name="title" content="Коровы"/> 
-<meta name="description" content="Правда ли что коровы ложатся, когда собирается дождь?" /> 
+<meta name="title" content="Шум деревьев"/> 
+<meta name="description" content="Как шум деревьев и треск веток предупреждают о приближении шторма?" /> 
  
 <!-- Open Graph / Facebook --> 
 <meta property="og:type" content="website" /> 
 <meta property="og:url" content="https://hseadc.github.io/chascha/"/> 
-<meta property="og:title" content="Цвета осени" /> 
-<meta property="og:description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Медиа Чаща собирает и интерпретирует эти природные сигналы." /> 
+<meta property="og:title" content="Шум деревьев" /> 
+<meta property="og:description" content="Как шум деревьев и треск веток предупреждают о приближении шторма?" /> 
 <meta property="og:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.png" /> 
 
  
 <!-- Twitter -->  
 <meta property="twitter:card" content="summary_large_image" /> 
 <meta property="twitter:url" content="https://hseadc.github.io/chascha/" /> 
-<meta property="twitter:title" content="Цвета осени" /> 
-<meta property="twitter:description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Медиа Чаща собирает и интерпретирует эти природные сигналы." /> 
+<meta property="twitter:title" content="Шум деревьев" /> 
+<meta property="twitter:description" content="Как шум деревьев и треск веток предупреждают о приближении шторма?" /> 
 <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.png" /> 
 
 
