--- a/src/tests/lakes.html
+++ b/src/tests/lakes.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />  
     <!-- Primary Meta Tags --> 
-<title>ЧАЩА</title> 
+<title>Тест по гидрологии. Проверка знаний о водных объектах, их классификации и физико-географических характеристиках в формате структурированных вопросов.</title> 
 <meta name="title" content="Чаща. Медиа о природных знаках "/> 
 <meta name="description" content="Тест по гидрологии. Проверка знаний о водных объектах, их классификации и физико-географических характеристиках в формате структурированных вопросов." /> 
  
@@ -22,7 +22,7 @@
 <script src="/src/test.js"></script>
 
 <meta name="keywords" content="моря, озера, медиа, природа, умвельт, природные знаки, медиа о природе">
- 
+<link rel="icon" href="../images/favicon.png" type="image/x-icon">
 </head> 
 <body class="lakes">
 
@@ -39,7 +39,7 @@
     <p>реки и озёра</p>
   </div>
 
-  <div class="quiz-container">
+  <div class="S_Quiz_Container">
     <div class="Q_QuestionBox">
       <img class="Q_QuestionBox1" src="/src/images/tests/question_box.webp">
     </div>
