--- a/src/tests.html
+++ b/src/tests.html
@@ -42,7 +42,7 @@
  <div class="S_TestCards">
     
     <div class="O_TestCard">
-        <a href="./tests/insects.html">
+        <a href="./tests/lakes.html">
         <div class="A_Image">
            <img src="./images/tests/baikal.webp">
         </div>
