--- a/src/tests.html
+++ b/src/tests.html
@@ -58,7 +58,7 @@
     </div>
 
     <div class="O_TestCard">
-        <a href="../tests/yavlenia.html">
+        <a href="./tests/yavlenia.html">
         <div class="A_Image">
            <img src="./images/tests/galo.webp">
         </div>  
@@ -74,7 +74,7 @@
     </div>
 
     <div class="O_TestCard">
-        <a href="../tests/insects.html">
+        <a href="./tests/insects.html">
         <div class="A_Image">
            <img src="./images/tests/fly.webp">
         </div>   
