add google analytics

--- a/src/about.html
+++ b/src/about.html
@@ -19,6 +19,7 @@
     <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.png" /> 
 
     <link rel="icon" href="images/favicon.png" type="image/x-icon"> 
+    <analytics></analytics>
 </head> 
 <body class="about_us"> 
     
