--- a/src/advice/ecoprivichki.html
+++ b/src/advice/ecoprivichki.html
@@ -26,6 +26,7 @@
 
   <meta name="keywords" content="цвета, листья, меняют, природные знаки, медиа о природе, осень">
   <link rel="icon" href="../images/favicon.png" type="image/x-icon">
+  <analytics></analytics>
   </head> 
 <body class="advice_eco">
     <div class="O_Header">
