--- a/src/color.html
+++ b/src/color.html
@@ -17,7 +17,8 @@
     <meta property="twitter:description" content="В этом разделе чаща рассказывает о том, что значат изменения в цветах в природе" /> 
     <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.png" /> 
     <title>Рвздел цвет</title>
-</head>
+    <analytics></analytics>
+  </head>
   
 
 <body class="sound"> 
