--- a/src/geo.html
+++ b/src/geo.html
@@ -18,7 +18,8 @@
     <meta property="twitter:description" content="В этом разделе ЧАЩА рассказывает о том, что значат изменения в геологии" /> 
     <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.png" /> 
     <title>Раздел Геология</title>
-</head>
+    <analytics></analytics>
+  </head>
 <body class="sound"> 
     <header>
         <div class="gradient"><img src="images/index/top_gradient.png" alt=""></div>
