--- a/src/geo/geo_article2.html
+++ b/src/geo/geo_article2.html
@@ -17,7 +17,8 @@
 <meta property="twitter:description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Медиа Чаща собирает и интерпретирует эти природные сигналы." /> 
 <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.png" /> 
     <title>Тектонические сдвиги: язык движения Земли</title>
-</head>
+    <analytics></analytics>
+  </head>
 <body class="main">
 
     <header>
