--- a/src/habitat.html
+++ b/src/habitat.html
@@ -18,7 +18,8 @@
     <meta property="twitter:description" content="В этом разделе чаща рассказывает о том, что значат изменения в поведении в природе" /> 
     <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.png" /> 
     <title>раздел поведение</title>
-</head>
+    <analytics></analytics>
+  </head>
   
 
 <body class="sound"> 
