--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,8 @@
 
   <meta name="keywords" content="медиа, природа, умвельт, природные знаки, медиа о природе">
   <link rel="icon" href="images/favicon.png" type="image/x-icon">
-  </head> 
+  <analytics></analytics>
+</head> 
   <body class="index">
     <div class="O_Header">
       <div class="M_Menu"> 
