--- a/src/map.html
+++ b/src/map.html
@@ -18,6 +18,7 @@
     <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.png" /> 
     <link rel="icon" href="images/favicon.png" type="image/x-icon">
     <title>Раздел карта</title>
+    <analytics></analytics>
 </head>
 <body class="map">
     <p><a href="./index.html">Главная</a></p>
