--- a/src/styleguide.html
+++ b/src/styleguide.html
@@ -19,6 +19,7 @@
     <script src="./styleguide.js" charset="UTF-8"></script>
     <link rel="icon" href="images/styleguide/favicon.png" type="image/x-icon">
     <title>стайл-гайд</title>
+    <analytics></analytics>
 </head>
 <body class="styleguide_style">
     <!-- <p><a href="./index.html">Главная</a></p> -->
