--- a/src/tests.html
+++ b/src/tests.html
@@ -23,6 +23,7 @@
 
 <meta name="keywords" content="тесты, природа, медиа, природа, умвельт, природные знаки, медиа о природе">
  
+<analytics></analytics>
 </head> 
 <body class="tests" >
 
