--- a/src/feno.html
+++ b/src/feno.html
@@ -18,7 +18,8 @@
     <meta property="twitter:description" content="В этом разделе чаща рассказывает о том, что значат изменения в фенологии в природе" /> 
     <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.png" /> 
     <title>Раздел фенология</title>
-</head>
+    <analytics></analytics>
+  </head>
  
 
 <body class="sound"> 
