--- a/src/habitat/migratsya_ptiz.html
+++ b/src/habitat/migratsya_ptiz.html
@@ -26,7 +26,8 @@
 
   <meta name="keywords" content="цвета, листья, меняют, природные знаки, медиа о природе, осень">
   <link rel="icon" href="../images/favicon.png" type="image/x-icon">
-  </head> 
+  <analytics></analytics>
+</head> 
   <body class="index">
     <div class="O_Header">
       <div class="M_Menu"> 
