--- a/src/literature.html
+++ b/src/literature.html
@@ -25,7 +25,8 @@
  
   <meta name="keywords" content="медиа, природа, умвельт, природные знаки, медиа о природе, чаща">
   <link rel="icon" href="images/favicon.png" type="image/x-icon">
-  </head>  
+  <analytics></analytics>
+</head>  
   <body class="index" >   
     <div class="O_Header">
       <div class="M_Menu">   
