--- a/src/literature/book.html
+++ b/src/literature/book.html
@@ -17,6 +17,7 @@
 <meta property="twitter:description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Сервис Умвельт собирает и интерпретирует эти природные сигналы." /> 
 <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.png" /> 
     <title>book</title>
+    <analytics></analytics>
 </head>
 <body>
     <p><a href="../index.html">Главная</a></p>
