--- a/src/structure.html
+++ b/src/structure.html
@@ -18,7 +18,8 @@
     <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.png" /> 
     <link rel="icon" href="images/favicon.png" type="image/x-icon">
     <title>Раздел строение</title>
-</head>
+    <analytics></analytics>
+  </head>
 <header>
     <div class="gradient"><img src="images/index/top_gradient.png" alt=""></div>
     <p class="chascha">чаща</p>
