--- a/src/tests/lakes.html
+++ b/src/tests/lakes.html
@@ -23,6 +23,7 @@
 
 <meta name="keywords" content="моря, озера, медиа, природа, умвельт, природные знаки, медиа о природе">
 <link rel="icon" href="../images/favicon.png" type="image/x-icon">
+<analytics></analytics>
 </head> 
 <body class="lakes">
 
