--- a/src/search.html
+++ b/src/search.html
@@ -6,6 +6,16 @@
     <title>Поиск</title>
 </head>
 <body>
+        <div class="O_Header">
+      <div class="M_Menu"> 
+        <div class="A_Logotype"><a href="./index.html">чаща</a></div> 
+        <div class="A_ChapterTests"><a href="./tests.html">тесты</a></div>
+        <div class="A_ChapterAbout"><a href="./about.html">о нас</a></div>
+        <div class="A_ChapterLit"><a href="./literature.html">литература</a></div>
+        <div class="A_ChapterLit"><a href="./styleguide.html">стайл-гайд</a></div>
+        <div class="A_ChapterLit"><a href="./search.html">поиск</a></div>
+      </div>
+    </div>
     <div class="O_Search">
         <input class="A_SearchInput" type="text" placeholder="ввдетите запрос">
         <div class="A_SearchButton disable">Найти</div>
